kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hostname-service
  labels:
    app: node-hostname
spec:
  selector:
    app: node-hostname
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
